# cloud-client-ai-service-framework

./: .gitignore  CMakeLists.txt  README.md  index.html  search_index.json
api-gateway/fcgi/: CMakeLists.txt  auth-conf.sh  install.sh  lighttpd.conf
api-gateway/fcgi/asr/cpp/: 16-asr.conf  CMakeLists.txt  fcgi_asr.cpp  post_healthcheck_asr_c.py  post_local_asr_c.py
api-gateway/fcgi/asr/python/: 16-asr-py.conf  README.txt  fcgi_asr.py  post_healthcheck_asr_py.py  post_local_asr_py.py
api-gateway/fcgi/classification/cpp/: 16-classification.conf  CMakeLists.txt  fcgi_classification.cpp  post_healthcheck_classification_c.py  post_local_classification_c.py
api-gateway/fcgi/classification/python/: 16-classification-py.conf  fcgi_classification.py  post_healthcheck_classification_py.py  post_local_classification_py.py
api-gateway/fcgi/classification_pd/cpp/: 16-classification-pd.conf  CMakeLists.txt  fcgi_classification_pd.cpp  post_local_classification_pd_c.py
api-gateway/fcgi/classification_tf/cpp/: 16-classification-tf.conf  CMakeLists.txt  fcgi_classification_tf.cpp  post_local_classification_tf.py
api-gateway/fcgi/classification_torch/cpp/: 16-classification-torch.conf  CMakeLists.txt  fcgi_classification_torch.cpp  post_local_classification_torch_c.py
api-gateway/fcgi/digitalnote/python/: 16-digitalnote-py.conf  fcgi_digitalnote.py  post_local_digitalnote_py.py
api-gateway/fcgi/face-detection-onnx/cpp/: 16-face-detection_onnx.conf  16-face_detection_onnx.conf  CMakeLists.txt  fcgi_face_detection_onnx.cpp  post_local_face_detection_onnx_c.py
api-gateway/fcgi/face-detection-torch/cpp/: 16-face-detection_torch.conf  16-face_detection_torch.conf  CMakeLists.txt  fcgi_face_detection_torch.cpp  post_local_face_detection_torch.py
api-gateway/fcgi/face-detection/cpp/: 16-face-detection.conf  CMakeLists.txt  fcgi_face_detection.cpp  post_healthcheck_face_detection_c.py  post_local_face_detection_c.py
api-gateway/fcgi/face-detection/python/: 16-face-detection-py.conf  16-face_detection-py.conf  fcgi_face_detection.py  post_healthcheck_face_detection_py.py  post_local_face_detection_py.py
api-gateway/fcgi/facial-landmark/cpp/: 16-facial-landmark.conf  CMakeLists.txt  fcgi_facial_landmark.cpp  post_healthcheck_facial_landmark_c.py  post_local_facial_landmark_c.py
api-gateway/fcgi/facial-landmark/python/: 16-facial-landmark-py.conf  fcgi_facial_landmark.py  post_healthcheck_facial_landmark_py.py  post_local_facial_landmark_py.py
api-gateway/fcgi/formula/python/: 16-formula-py.conf  fcgi_formula.py  post_local_formula.py
api-gateway/fcgi/handwritten/python/: 16-handwritten-py.conf  fcgi_codec.py  fcgi_handwritten.py  post_local_handwritten.py
api-gateway/fcgi/info/cpp/: 16-apiinfo.conf  16-cpuinfo.conf  16-gpuinfo.conf  16-meminfo.conf  CMakeLists.txt  fcgi_apiinfo.cpp  fcgi_cpuinfo.cpp  fcgi_gpuinfo.cpp  fcgi_meminfo.cpp
api-gateway/fcgi/live_asr/python/: 16-live-asr-py.conf  README.txt  fcgi_live_asr.py  post_local_live_asr.py
api-gateway/fcgi/ocr/cpp/: 16-ocr.conf  CMakeLists.txt  fcgi_ocr.cpp  post_healthcheck_ocr_c.py  post_local_ocr_c.py
api-gateway/fcgi/ocr/python/: 16-ocr-py.conf  fcgi_ocr.py  post_healthcheck_ocr_py.py  post_local_ocr_py.py
api-gateway/fcgi/policy/cpp/: 16-policy.conf  CMakeLists.txt  fcgi_policy.cpp  post_local_policy_c.py
api-gateway/fcgi/policy/python/: 16-policy-py.conf  fcgi_policy.py  post_local_policy_py.py
api-gateway/fcgi/ppocr/python/: 16-ppocr-py.conf  fcgi_ppocr.py  post_local_ppocr.py
api-gateway/fcgi/segmentation/cpp/: 16-segmentation.conf  CMakeLists.txt  fcgi_segmentation.cpp  post_local_segmentation_c.py
api-gateway/fcgi/segmentation/python/: 16-segmentation-py.conf  fcgi_segmentation.py  post_local_segmentation_py.py
api-gateway/fcgi/smart-photo/cpp/: 16-smartphoto.conf  CMakeLists.txt  fcgi_smartphoto.cpp  smart_photo_log.h
api-gateway/fcgi/streaming/cpp/: 16-streaming-debug.conf  16-streaming.conf  CMakeLists.txt  fcgi_streaming.cpp  limbs_status.cpp  limbs_status.hpp  post_local_streaming_c.py
api-gateway/fcgi/test-script/: run_test_script.sh
api-gateway/grpc/: CMakeLists.txt  asr.cc  asr.h  grpc_inference_service.cc  grpc_inference_service.h  grpc_inference_service_test.py  install.sh  ocr.cc  ocr.h
api-gateway/grpc/config/: nghttpx.conf
health-monitor/health-monitor/: CMakeLists.txt  service_runtime_health_monitor.cc  service_runtime_health_monitor.h  service_runtime_health_monitor.proto  service_runtime_health_monitor.service  test.py  test_health_monitor.sh
health-monitor/health-monitor-agent/: CMakeLists.txt  config.yml  config.yml.example  inference_service.proto  service_runtime_health_monitor.proto  service_runtime_health_monitor_client.py  service_runtime_health_monitor_server.py
inference-runtime/: CMakeLists.txt  README.txt  install.sh
inference-runtime/runit/policy_daemon/: run
inference-runtime/runtime_service/: CMakeLists.txt  build_runtime_lib.sh
inference-runtime/runtime_service/src/: CMakeLists.txt  connect_server.cpp  connect_server.hpp  cpu_state.cpp  cpu_state.hpp  daemon_policy.cpp  encrypt.c  iinfer_entity.cpp  iinfer_entity.hpp  infer_entity.hpp  inference_engine_library.txt  irt_inference_engine.cpp  irt_inference_engine.hpp  policy.cpp  policy.hpp  policy_setting.cfg  shared_lib_load.cpp  shared_lib_load.hpp  shared_lib_pointer.hpp  vino_ie_pipe.cpp  vino_ie_pipe.hpp  vino_ie_pipe_py.cpp
log/: CMakeLists.txt  Makefile  ccai_log.c  ccai_log.h  dynamic.list  install.sh  log.c  log.h  test.c
smart-photo/: CMakeLists.txt  ccai_smart_photo.h  db.cpp  db.h  install.sh  smart_photo.cpp  smart_photo.h  smart_photo_log.h  test.cpp
video-streamer/: .gitignore  CMakeLists.txt  Makefile  backgroundblur.cpp  ccai_stream.c  ccai_stream.h  ccai_stream_plugin.h  ccai_stream_utils.h  cs.h  emotion.cpp  general_launcher.c  hpe_eHRNet.cpp  hpe_eHRNet.hpp  install.sh  plugin.c  plugin_sample.c  pose.cpp  test.c
video-streamer/plugins/: general_launcher.conf
video-streamer/python/: test.py  test_sample.py
video-streamer/python/ccai_stream/: __init__.py
(+269 files in other folders)
